--- a/src/app/Secretaire/edit-patient/edit-patient.component.html
+++ b/src/app/Secretaire/edit-patient/edit-patient.component.html
@@ -30,7 +30,8 @@
                                                     (click)="addSuiviPrescription(patient.id)">Surveillance</a>
                                                 <a class="dropdown-item"
                                                     (click)="addSoinPrescription(patient.id)">Soins</a>
-                                                <a class="dropdown-item" href="#">Aliment</a>
+                                                <a class="dropdown-item"
+                                                    (click)="addAlimentPrescription(patient.id)">Aliment</a>
                                             </div>
                                         </div>
                                     </div>
