--- a/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
+++ b/src/app/Secretaire/detail-medical-prescription/detail-medical-prescription.component.html
@@ -24,7 +24,7 @@
                         <div class="col-md-10 col-sm-10 ">
                             <div class="x_panel">
                                 <div class="x_title">
-                                    <button class="btn" id="add" (click)="editPatient(prescription.patient.id)"><i
+                                    <button class="btn" id="add" (click)="detailPatient(prescription.patient.id)"><i
                                             class="fa fa-times"></i></button>
                                     <h1 style="text-align: center;">Prescription Médicale </h1><br>
                                     <hr>
