--- a/src/app/Secretaire/add-suivi-prescription/add-suivi-prescription.component.html
+++ b/src/app/Secretaire/add-suivi-prescription/add-suivi-prescription.component.html
@@ -113,6 +113,7 @@
 
 
 
+
                                         </div><br>
                                         <div class="card-header">Paramètre</div>
                                         <div class="card-body" formArrayName="contacts">
@@ -147,6 +148,15 @@
                                                             <span class="text-danger"
                                                                 *ngIf="getContactsFormGroup(i).controls['rythme'].touched && getContactsFormGroup(i).controls['rythme'].hasError('required')">
                                                                 le champ vide! </span>
+                                                        </div>
+                                                        <div class="form-group col-12">
+                                                            <label>Remarque</label>
+
+                                                            <textarea class="form-control" formControlName="remarque">
+                                                                </textarea>
+                                                            <span class="text-danger"
+                                                                *ngIf="getContactsFormGroup(i).controls['remarque'].touched && getContactsFormGroup(i).controls['remarque'].hasError('required')">
+                                                                le champ vide!</span>
                                                         </div>
 
 
