--- a/src/app/Secretaire/historique-prescription/historique-prescription.component.html
+++ b/src/app/Secretaire/historique-prescription/historique-prescription.component.html
@@ -22,7 +22,7 @@
                             <div class="x_panel">
                                 <div class="x_title">
                                     <h2>Liste de tous les <small>Prescriptions du:
-                                            {{Hpatient.patient.nom}}&nbsp;{{Hpatient.patient.prenom}}</small></h2>
+                                            {{Hpatient?.patient.nom}}&nbsp;{{Hpatient?.patient.prenom}}</small></h2>
 
                                     <ul class="nav navbar-right panel_toolbox">
                                         <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
@@ -128,10 +128,14 @@
                                                                         </a></ng-template>
 
 
+                                                                    <ng-template
+                                                                        [ngIf]="c.type=='MDCL' && c.secretaire.id==ownerAccount.id">
+                                                                        <a class="btn btn-success btn-xs"
+                                                                            (click)="editMedicalPrescription(c.id)"
+                                                                            title="edit"><i class="fa fa-pencil"></i>
+                                                                        </a>
+                                                                    </ng-template>
 
-                                                                    <a *ngIf=" c.secretaire.id==ownerAccount.id"
-                                                                        class="btn btn-info btn-xs" title="edit"><i
-                                                                            class="fa fa-pencil"></i> </a>
                                                                 </td>
 
                                                             </tr>
@@ -157,7 +161,8 @@
                                             <blockquote class="message" id="decaler2">
                                                 <p>
                                                     &nbsp;
-                                                    Le patient {{Hpatient.patient.nom}}&nbsp;{{Hpatient.patient.prenom}}
+                                                    Le patient
+                                                    {{Hpatient?.patient.nom}}&nbsp;{{Hpatient?.patient.prenom}}
                                                     n'a pas des prescriptions.</p>
                                                 <br><br><br><br><br><br><br><br><br><br>
 
