add dosage and remarque variable in content

--- a/src/app/Secretaire/edit-medical-prescription/edit-medical-prescription.component.html
+++ b/src/app/Secretaire/edit-medical-prescription/edit-medical-prescription.component.html
@@ -193,7 +193,7 @@
                                                                             (click)="stopTraitement(item)">
                                                                             <i class="fa fa-times"></i></a>&nbsp;&nbsp;
                                                                         <a title="edit" style="color:#1ABB9C"
-                                                                            (click)="editTraitement(item.id)">
+                                                                            (click)="editTraitement(item.id,prescription.id)">
                                                                             <i class=" fa fa-pencil"></i></a>
 
                                                                     </div>
