--- a/src/app/Secretaire/edit-traitement/edit-traitement.component.css
+++ b/src/app/Secretaire/edit-traitement/edit-traitement.component.css
@@ -6,7 +6,7 @@
   .ng-invalid:not(form)  {
     border-left: 5px solid #a94442; /* red */
   }
-  #decaleAffecteBox{margin-left: 80px;}
+  #decaleAffecteBox{margin-left: 180px;margin-top: -40px;}
   #box{
     height: 240px;
     width: 70px;
