--- a/src/app/Secretaire/edit-traitement/edit-traitement.component.html
+++ b/src/app/Secretaire/edit-traitement/edit-traitement.component.html
@@ -4,23 +4,16 @@
 
             <app-menu></app-menu>
             <app-header></app-header>
-
             <!-- page content -->
             <div class="right_col" role="main">
                 <div class="">
-                    <div class="page-title">
-                        <div class="title_left">
-                            <h3>Modifier Traitement</h3>
-                        </div>
-                    </div>
-
                     <div class="clearfix"></div>
                     <br><br><br>
                     <div class="row">
                         <div class="col-md-7 " id="decaleAffecteBox">
-                            <div class="x_panel bg-light">
+                            <div class="x_panel ">
                                 <div class="x_title">
-                                    <h2>Affecter le patient à un service </h2>
+                                    <h2>Modifier le traitement: <small>{{traitement.nom_traitement}}</small> </h2>
 
                                     <div class="clearfix"></div>
                                 </div>
@@ -36,7 +29,7 @@
 
                                         </div>
 
-                                        <div class="form-group">
+                                        <div class="form-group ">
                                             <label for="inputState">Voie</label>
                                             <select id="serviceAff" class="form-control" formControlName="voix"
                                                 [(ngModel)]="traitement.voix" placeholder="voie" required>
@@ -52,6 +45,7 @@
                                             </select>
 
                                         </div>
+
                                         <div class="form-group ">
                                             <label for="inputNom4">Rythme</label>
                                             <input type="number" id="rythme" formControlName="rythme"
@@ -64,6 +58,7 @@
                                                 [(ngModel)]="traitement.dosage" class="form-control" required>
 
                                         </div>
+
                                         <div class="form-group ">
                                             <label for="inputNom4">Remarque</label>
                                             <input type="text" id="remarque" formControlName="remarque"
@@ -81,6 +76,7 @@
 
                                                 <button type="submit" [disabled]="traitementForm.invalid"
                                                     class="btn btn-success">Valider</button>
+
                                             </div>
                                         </div>
 
@@ -89,32 +85,14 @@
                             </div>
                         </div>
 
+
                     </div>
 
 
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-
-
-
-
-
-
-
                 </div>
+
             </div>
             <!-- /page content -->
-
-
-
-
-
-
-
-
-
-
-
             <app-footer></app-footer>
         </div>
     </div>
