edit suivi prescription

--- a/src/app/Secretaire/detail-soin-prescription/detail-soin-prescription.component.html
+++ b/src/app/Secretaire/detail-soin-prescription/detail-soin-prescription.component.html
@@ -150,6 +150,9 @@
                                                                             N/J</span>&nbsp;&nbsp; <a>
                                                                         </a>
                                                                     </div>
+                                                                    <p class="excerpt">{{item.remarque}}
+
+                                                                    </p>
                                                                     <!--p class="excerpt">{{item.remarque}}
 
                                                                     </p-->
