--- a/src/app/Secretaire/edit-test/edit-test.component.css
+++ b/src/app/Secretaire/edit-test/edit-test.component.css
@@ -1,4 +1,3 @@
-
 .ng-valid[required], .ng-valid.required  {
     border-left: 5px solid #42A948; /* green */
   }
@@ -6,8 +5,13 @@
   .ng-invalid:not(form)  {
     border-left: 5px solid #a94442; /* red */
   }
-  #decaleAffecteBox{margin-left: 180px;margin-top: 50px;}
-  #box{
+
+  #decaleBox{
+    margin-left: 180px;
+    margin-top: 50px;
+}
+
+#box{
     height: 240px;
     width: 70px;
   }
