--- a/src/app/Secretaire/edit-traitement/edit-traitement.component.html
+++ b/src/app/Secretaire/edit-traitement/edit-traitement.component.html
@@ -1,98 +1,124 @@
-<body class="nav-md footer_fixed">
+<body class="nav-md">
     <div class="container body">
         <div class="main_container">
 
             <app-menu></app-menu>
             <app-header></app-header>
+
+
             <!-- page content -->
             <div class="right_col" role="main">
                 <div class="">
+
                     <div class="clearfix"></div>
-                    <br><br><br>
                     <div class="row">
-                        <div class="col-md-7 " id="decaleAffecteBox">
-                            <div class="x_panel ">
-                                <div class="x_title">
-                                    <h2>Modifier le traitement: <small>{{traitement.nom_traitement}}</small> </h2>
+                        <div class="col-md-1 col-sm-1 ">
+                        </div>
 
-                                    <div class="clearfix"></div>
+                        <div class="col-md-10 col-sm-10 ">
+                            <div class="row">
+                                <div class="col-md-7 " id="decaleAffecteBox">
+                                    <div class="x_panel">
+                                        <div class="x_title">
+                                            <h2>Modifier le traitement: <small>{{traitement.nom_traitement}}</small>
+                                            </h2>
+
+                                            <div class="clearfix"></div>
+                                        </div>
+                                        <div class="x_content">
+                                            <br />
+                                            <form id="demo-form2" data-parsley-validate
+                                                class="form-horizontal form-label-left" novalidate
+                                                [formGroup]="traitementForm" (ngSubmit)="editTraitement()">
+
+                                                <div class="form-group ">
+                                                    <label for="inputNom4">Nom traitement</label>
+                                                    <input type="text" id="nom" formControlName="nomTraitement"
+                                                        [(ngModel)]="traitement.nom_traitement" class="form-control"
+                                                        required>
+
+                                                </div>
+
+                                                <div class="form-group ">
+                                                    <label for="inputState">Voie</label>
+                                                    <select id="serviceAff" class="form-control" formControlName="voix"
+                                                        [(ngModel)]="traitement.voix" placeholder="voie" required>
+                                                        <option disabled>chef service</option>
+
+                                                        <option>IV</option>
+                                                        <option>IR</option>
+                                                        <option>IM</option>
+                                                        <option>S/C</option>
+                                                        <option>Paux</option>
+
+
+                                                    </select>
+
+                                                </div>
+
+                                                <div class="form-group ">
+                                                    <label for="inputNom4">Rythme</label>
+                                                    <input type="number" id="rythme" formControlName="rythme"
+                                                        [(ngModel)]="traitement.rythme" class="form-control" required>
+
+                                                </div>
+                                                <div class="form-group ">
+                                                    <label for="inputNom4">Dosage</label>
+                                                    <input type="number" id="dosage" formControlName="dosage"
+                                                        [(ngModel)]="traitement.dosage" class="form-control" required>
+
+                                                </div>
+
+                                                <div class="form-group ">
+                                                    <label for="inputNom4">Remarque</label>
+                                                    <input type="text" id="remarque" formControlName="remarque"
+                                                        [(ngModel)]="traitement.remarque" class="form-control" required>
+
+                                                </div>
+
+
+
+
+                                                <div class="ln_solid"></div>
+                                                <div class="form-group row">
+                                                    <div class="col-md-9 col-sm-9  offset-md-3">
+                                                        <button type="button" class="btn btn-primary"
+                                                            (click)="return()">Retour</button>
+
+                                                        <button type="submit" [disabled]="traitementForm.invalid"
+                                                            class="btn btn-success">Valider</button>
+
+                                                    </div>
+                                                </div>
+
+                                            </form>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="x_content">
-                                    <br />
-                                    <form id="demo-form2" data-parsley-validate class="form-horizontal form-label-left"
-                                        novalidate [formGroup]="traitementForm" (ngSubmit)="editTraitement()">
-
-                                        <div class="form-group ">
-                                            <label for="inputNom4">Nom traitement</label>
-                                            <input type="text" id="nom" formControlName="nomTraitement"
-                                                [(ngModel)]="traitement.nom_traitement" class="form-control" required>
-
-                                        </div>
-
-                                        <div class="form-group ">
-                                            <label for="inputState">Voie</label>
-                                            <select id="serviceAff" class="form-control" formControlName="voix"
-                                                [(ngModel)]="traitement.voix" placeholder="voie" required>
-                                                <option disabled>chef service</option>
-
-                                                <option>IV</option>
-                                                <option>IR</option>
-                                                <option>IM</option>
-                                                <option>S/C</option>
-                                                <option>Paux</option>
 
 
-                                            </select>
-
-                                        </div>
-
-                                        <div class="form-group ">
-                                            <label for="inputNom4">Rythme</label>
-                                            <input type="number" id="rythme" formControlName="rythme"
-                                                [(ngModel)]="traitement.rythme" class="form-control" required>
-
-                                        </div>
-                                        <div class="form-group ">
-                                            <label for="inputNom4">Dosage</label>
-                                            <input type="number" id="dosage" formControlName="dosage"
-                                                [(ngModel)]="traitement.dosage" class="form-control" required>
-
-                                        </div>
-
-                                        <div class="form-group ">
-                                            <label for="inputNom4">Remarque</label>
-                                            <input type="text" id="remarque" formControlName="remarque"
-                                                [(ngModel)]="traitement.remarque" class="form-control" required>
-
-                                        </div>
-
-
-
-
-                                        <div class="ln_solid"></div>
-                                        <div class="form-group row">
-                                            <div class="col-md-9 col-sm-9  offset-md-3">
-                                                <button type="button" class="btn btn-primary">Annulé</button>
-
-                                                <button type="submit" [disabled]="traitementForm.invalid"
-                                                    class="btn btn-success">Valider</button>
-
-                                            </div>
-                                        </div>
-
-                                    </form>
-                                </div>
                             </div>
+                            <br><br><br><br><br><br>
+                        </div>
+
+
+                        <div class="col-md-1 col-sm-1 ">
                         </div>
 
 
                     </div>
 
 
-                </div>
 
+
+
+
+
+
+                </div>
             </div>
             <!-- /page content -->
+
             <app-footer></app-footer>
         </div>
     </div>
