add search traitement

--- a/src/app/Secretaire/historique-prescription/historique-prescription.component.html
+++ b/src/app/Secretaire/historique-prescription/historique-prescription.component.html
@@ -75,22 +75,26 @@
                                                                     <ng-template [ngIf]="c.type=='MDCL'"> <a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailPrescM(c.id)" title="view"><i
-                                                                                class="fa fa-folder"></i> </a>
+                                                                                class="fa fa-file-powerpoint-o"></i>
+                                                                        </a>
                                                                     </ng-template>
                                                                     <ng-template [ngIf]="c.type=='SOIN'"><a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailSoinPrescription(c.id)"
-                                                                            title="view"><i class="fa fa-folder"></i>
+                                                                            title="view"><i
+                                                                                class="fa fa-file-powerpoint-o"></i>
                                                                         </a></ng-template>
                                                                     <ng-template [ngIf]="c.type=='SUIV'"><a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailSuiviPrescription(c.id)"
-                                                                            title="view"><i class="fa fa-folder"></i>
+                                                                            title="view"><i
+                                                                                class="fa fa-file-powerpoint-o"></i>
                                                                         </a></ng-template>
                                                                     <ng-template [ngIf]="c.type=='ALMT'"><a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailAlimentPrescription(c.id)"
-                                                                            title="view"><i class="fa fa-folder"></i>
+                                                                            title="view"><i
+                                                                                class="fa fa-file-powerpoint-o"></i>
                                                                         </a></ng-template>
 
 
@@ -109,22 +113,26 @@
                                                                     <ng-template [ngIf]="c.type=='MDCL'"> <a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailPrescM(c.id)" title="view"><i
-                                                                                class="fa fa-folder"></i> </a>
+                                                                                class="fa fa-file-powerpoint-o"></i>
+                                                                        </a>
                                                                     </ng-template>
                                                                     <ng-template [ngIf]="c.type=='SOIN'"><a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailSoinPrescription(c.id)"
-                                                                            title="view"><i class="fa fa-folder"></i>
+                                                                            title="view"><i
+                                                                                class="fa fa-file-powerpoint-o"></i>
                                                                         </a></ng-template>
                                                                     <ng-template [ngIf]="c.type=='SUIV'"><a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailSuiviPrescription(c.id)"
-                                                                            title="view"><i class="fa fa-folder"></i>
+                                                                            title="view"><i
+                                                                                class="fa fa-file-powerpoint-o"></i>
                                                                         </a></ng-template>
                                                                     <ng-template [ngIf]="c.type=='ALMT'"><a
                                                                             class="btn btn-success btn-xs"
                                                                             (click)="detailAlimentPrescription(c.id)"
-                                                                            title="view"><i class="fa fa-folder"></i>
+                                                                            title="view"><i
+                                                                                class="fa fa-file-powerpoint-o"></i>
                                                                         </a></ng-template>
 
 
