--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -83,6 +83,28 @@
                             </div>
                         </div>
 
+                        <div class="card bg-success" style="max-width: 18rem;" *ngIf="user.role=='secretaire'">
+                            <div class="card-body">
+                                <h5 class="card-title">Traitement</h5>
+                                <!--p class="card-text" id="colorWriter">Some quick example text to build on the panel
+                                    title and make up the
+                                    bulk of the panel's content.</p-->
+                                <span class="float-right">
+                                    <!--i class="fa fa-wheelchair fa-5x"></i-->
+                                    <img src="../assets/template/images/med.png" alt="..."
+                                        style="height: 60px;width: 60px;">
+
+
+                                </span>
+                                <br><br><br>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">Plus Info <a (click)="searchTraitement()"><i
+                                            class="fa fa-arrow-circle-right"></i></a></small>
+
+                            </div>
+                        </div>
+
                     </div>
                     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                     <!--div id="box">
